# magic-kernel-rust

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
examples/: resize.rs
src/: imagef64.rs  kernel.rs  lib.rs  resize.rs
src/kernel/: definitions.rs  kernel1d.rs  kernel2d.rs
