[package]
categories = ["multimedia::images"]
description = "Implementation of Magic Kernel family of resizing algorithms."
edition = "2021"
keywords = ["image", "resize", "magic kernel", "magic kernel sharp"]
license = "MIT"
name = "magic-kernel"
repository = "https://github.com/SevInf/magic-kernel-rust"
version = "0.1.0"

exclude = ["example.jpg", "target"]

[dev-dependencies]
image = {version = "^0.25.1"}
